--- a/src/Views/Home/map-page/MapPageView.scss
+++ b/src/Views/Home/map-page/MapPageView.scss
@@ -1,6 +1,6 @@
 @import 'src/Assets/Styles/Helpers/Helpers.Style.scss';
 
-.dashboard-wrapper {
+.maps-wrapper {
   .MuiMasonry-root {
     padding-right: 2rem;
   }
