--- a/src/Components/Tables/Tables.Style.scss
+++ b/src/Components/Tables/Tables.Style.scss
@@ -27,7 +27,6 @@
   position: relative;
 
   .MuiTableContainer-root {
-    max-height: calc(100vh - 200px);
     overflow-y: auto;
     border-radius: 0;
   }
@@ -35,6 +34,7 @@
 
 .table-wrapper {
   padding: 1rem;
+  padding-top: 0;
 
   &.MuiTable-root {
     border-collapse: separate;
@@ -95,7 +95,6 @@
           color: #5b5b5b;
           z-index: 2 !important;
           width: 50px;
-          box-shadow: $bs-secondary;
 
           &:first-child {
             border-top-left-radius: 1rem;
@@ -151,7 +150,7 @@
         &:hover,
         &.table-row-overlay {
           .MuiTableCell-body {
-            background-color: $c-primary-light !important;
+            background-color: $c-primary-lighter !important;
           }
         }
 
