--- a/src/Views/Home/map-page/MapPageView.scss
+++ b/src/Views/Home/map-page/MapPageView.scss
@@ -1,102 +1,51 @@
 @import 'src/Assets/Styles/Helpers/Helpers.Style.scss';
 
 .maps-wrapper {
-  .MuiMasonry-root {
-    padding-right: 2rem;
-  }
+  background-color: white;
+  box-shadow: $bs-primary;
+  overflow: hidden;
+  position: relative;
+}
 
-  .charts-wrapper {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 2rem;
+.selected-marker-dialog-wrapper {
+  .dialog-content {
+    min-height: 20rem;
 
-    .chart-item {
-      margin-right: 1rem;
+    .car-logo-wrapper {
+      display: flex;
+      justify-content: center;
 
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-
-  .chart-item {
-    width: 33.3333%;
-    background-color: white;
-    box-shadow: $bs-primary;
-    padding: 1.5rem;
-    transition: all 0.18s ease-in-out;
-    border-radius: 1.5rem;
-    position: relative;
-
-    &.is-number {
-      width: 25%;
-    }
-
-    .mdi {
-      &::before {
-        font-size: 45px;
-        color: $c-primary;
+      img {
+        width: 90%;
+        height: 100%;
       }
     }
 
-    .chart-actiion {
-      position: absolute;
-      right: 1rem;
-      top: 1rem;
+    .marker-info-wrapper {
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      padding-bottom: 2rem;
+    }
 
-      .mdi {
-        &::before {
-          font-size: 24px;
-          color: $c-gray-dark;
+    .info-wrapper {
+      display: flex;
+      align-items: center;
+      font-size: 16px;
+      min-width: 5rem;
+      margin-bottom: 0.5rem;
+
+      .item-label {
+        display: flex;
+        align-items: center;
+        font-weight: bold;
+        font-family: $ff-bold;
+        min-width: 10rem;
+
+        .mdi::before {
+          font-size: 10px;
         }
       }
     }
-
-    .chart-title {
-      font-size: 26px;
-      color: $c-primary-dark;
-      font-family: $ff-extrabold;
-      padding-bottom: 0.5rem;
-      padding-top: 0.5rem;
-    }
-
-    .chart-body {
-      font-size: 16px;
-      color: $c-primary;
-      font-family: $ff-semibold;
-    }
   }
-}
-
-.more-actions-popover-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem 0;
-
-  .MuiButtonBase-root {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    font-weight: bold !important;
-    font-family: $ff-semibold !important;
-
-    .mdi {
-      &::before {
-        font-size: 22px;
-        color: $c-primary;
-      }
-    }
-
-    &:hover {
-      background-color: #6373ff37;
-    }
-  }
-}
-
-.MuiPaper-root {
-  border-radius: 1rem !important;
 }
