--- a/src/Views/Home/map-page/MapPageView.scss
+++ b/src/Views/Home/map-page/MapPageView.scss
@@ -5,6 +5,11 @@
   box-shadow: $bs-primary;
   overflow: hidden;
   position: relative;
+
+  @include themify($themes) {
+    background-color: themed('button-color');
+    box-shadow: 0 0 25px 1px rgb(71 98 123 / 26%);
+  }
 }
 
 .map-render-wrapper {
